/*!
* @file
* @brief IPublicKey
*
* @copyright Copyright (C) University of Bristol 2017
*    This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. 
*    If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
*    See LICENSE file for details.
* @date 01/02/2018
* @author Richard Collins <richard.collins@bristol.ac.uk>
*/

syntax = "proto3";
import public "Keys.proto";

package cqp.remote;

/// Interface for exchanging public keys
service IPublicKey
{
    /**
     * @brief SharePublicKey
     * Share public keys between client and server
     * The id of the client can be passed as initial meta data with the name idToken or
     * a new id will be returned in trailing metadata
     * @param request The caller's public key
     * @param response The callee's publib key
     * @return status
     */
    rpc SharePublicKey(PublicKey) returns (PublicKey);
}
